premise-core/tests/snapshots/plan_snapshots__05_imports_and_metadata.snap
---
source: premise-core/tests/plan_snapshots.rs
expression: plan
---
{
  "plan": {
    "steps": [
      {
        "adapter": "custom_adapter.yaml",
        "index": 0
      }
    ]
  },
  "graph": {
    "nodes": [
      {
        "id": "custom_adapter.yaml",
        "index": 0
      }
    ],
    "edges": []
  },
  "diagnostics": []
}
