premise-core/tests/snapshots/plan_snapshots__06_plus_syntax.snap
---
source: tests/plan_snapshots.rs
expression: plan
---
{
  "plan": {
    "steps": []
  },
  "diagnostics": []
}
