premise-core/tests/snapshots/plan_snapshots__09_adapters_and_block_scalars.snap
---
source: premise-core/tests/plan_snapshots.rs
expression: plan
---
{
  "plan": {
    "steps": [
      {
        "adapter": "adapters/text_enhancement.yaml",
        "index": 0
      },
      {
        "adapter": "adapters/post_processing.yaml",
        "index": 1
      }
    ]
  },
  "graph": {
    "nodes": [
      {
        "id": "adapters/text_enhancement.yaml",
        "index": 0
      },
      {
        "id": "adapters/post_processing.yaml",
        "index": 1
      }
    ],
    "edges": [
      {
        "from": 0,
        "to": 1
      }
    ]
  },
  "diagnostics": []
}
