premise-core/tests/snapshots/plan_snapshots__13_world_qualified_refs.snap
---
source: premise-core/tests/plan_snapshots.rs
expression: plan
---
{
  "plan": {
    "steps": []
  },
  "graph": {
    "nodes": [],
    "edges": []
  },
  "diagnostics": []
}
